support/global/src/main/kotlin/com/example/mindshare/error/exception/ForbiddenException.kt
package com.example.mindshare.error.exception

import com.example.mindshare.ErrorCode

class ForbiddenException(
    val errorCode: ErrorCode,
    val data: Any? = null,
) : RuntimeException(errorCode.message)
